# benchmark

./: .gitignore  Cargo.toml  docker-compose.vendors.yml  generate_docker_compose.sh  readme.md  run-comparison.sh
.github/: dependabot.yml
.github/workflows/: playwright.yml
dashboards/: ibexdb_dashboard.json
src/: error.rs  ibex.rs  lib.rs  main.rs  neo4j_client.rs  scenario.rs  utils.rs
src/falkor/: falkor_driver.rs  falkor_process.rs
src/ibex/: ibex_driver.rs  ibex_process.rs
ui/: README.md  package.json
