# Standalone workspace root: this is a nested git checkout (its own repo/remote)
# inside ibexdb-rust, not a member of its workspace — the empty table stops
# cargo's upward search from binding it to the parent workspace.
[workspace]

[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"


description = "Head-to-head graph database benchmark harness: ibexdb vs FalkorDB vs Neo4j"
homepage = "https://github.com/jasonsgraham/benchmark"
readme = "readme.md"
repository = "https://github.com/jasonsgraham/benchmark"
license = "MIT"
categories = ["database"]
keywords = ["database", "graph-database", "database-driver", "ibexdb", "benchmark"]

[lints.clippy]
result_large_err = "allow"


[dependencies]
neo4rs = "0.8.0"
thiserror = "2.0.6"
tokio = { version = "1.42.0", features = ["full", "tracing"] }
futures = "0.3.31"
rand = "0.8.5"
histogram = { version = "0.11", features = ["serde"] }
reqwest = { version = "0.12.9", features = ["gzip"] }
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
tokio-stream = { version = "0.1.17", features = ["io-util"] }
clap = { version = "4.5.23", features = ["cargo", "derive", "env"] }
clap_complete = "4.5.36"
nix = { version = "0.29.0", features = ["process", "signal"] }
falkordb = { version = "0.1.10", features = ["tokio"] }
#falkordb = { path = "/Users/barak/dev/falkordb-rs", features = ["tokio"] }
redis = { version = "0.27.6", features = ["tokio-comp"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"


tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
prometheus = { version = "0.13.4", features = ["gen"] }
lazy_static = "1.5"
hyper = { version = "0.14.31", features = ["server", "runtime", "http1", "tcp"] }
nonzero = "0.2.0"
sysinfo = "0.33.0"

[[bin]]
name = "benchmark"
path = "src/main.rs"





[dev-dependencies]

[profile.release]
opt-level = 3  # This is the default
lto = true     # Enable Link Time Optimization




